--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "author": {
+        "name": "white-rabbit",
+        "email": "niki.babko@gmail.com"
+    },
     "name": "landing-page_active-box",
     "version": "1.0.0",
     "description": "",
@@ -13,7 +17,6 @@
         "last 3 version"
     ],
     "keywords": [],
-    "author": "white-rabbit",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.2.2",
