--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nikitababko/github-package-demo",
+  "name": "@nikitababko/testing",
   "author": {
     "name": "Nikita Babko",
     "email": "niki.babko@gmail.com"
