--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "version": "1.0.2",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com/nikitababko"
   },
   "repository": "git://github.com/nikitababko/testing.git",
   "bugs": {
