--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "license": "MIT",
   "version": "1.1.0",
+  "main": "src/hooks/index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/nikitababko"
   },
