--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: 🟢 node
         uses: actions/setup-node@v2.1.5
+      - name: Authenticate with GitHub package registry
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.AUTH_GITHUB_TOKEN }}" > ~/.npmrc
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org
