--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,9 +19,10 @@ jobs:
           registry-url: https://registry.npmjs.org
       - run: npm install
       - name: 🚀 publish
-        run: npm publish --access public
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+      - name: 🟢 node
         uses: actions/setup-node@v2.1.5
         with:
           registry-url: 'https://npm.pkg.github.com'
